discussion/kv_engine/143048/143048_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37920: Fix all tests in some way affected by MB-37920

Some tests couldn't check out the cached vbstate because of what we are
fixing under this MB. Now that the fix is in, expand those tests to
verify both the cached and on-disk vbstate.

Change-Id: I7a4b9126309a3aea391f04ea4f09984bb1b532c4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-01-08 13:03:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-08 13:06:19.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32811/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32811/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28268/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7048/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8355/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7965/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15901/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8086/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8086/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6471/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5786:9: error: use of undeclared identifier "checkPersistedVBState" [clang-diagnostic-error]
        checkPersistedVBState(0 /*lastSnapStart*/,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5806:9: error: use of undeclared identifier "checkPersistedVBState" [clang-diagnostic-error]
        checkPersistedVBState(3 /*lastSnapStart*/,
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6471/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:5786:9:
error: use of undeclared identifier "checkPersistedVBState" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6471/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5006/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
